change colour for nav icon

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1716,6 +1716,8 @@ footer .widget.profile span, footer .widget.profile a{
     left: 50%;
     margin-left: -13px;
     top: 14px;
+    background: @font-swatch6-color-hover;
+    box-shadow: 0 6px 0 @font-swatch6-color-hover, 0 12px 0 @font-swatch6-color-hover;
   }
   
  .widget .extendednavigation ul {
