.btn.ecom-product-go-to-checkout-btn styles added

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1222,6 +1222,12 @@ select::-ms-expand {
   display:block;
 }
 
+.btn.ecom-product-go-to-checkout-btn {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 // Ecom Basket Summary
 
 .ecombasketsummary a {
