--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1148,9 +1148,6 @@ time {
 }
 
 .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select {
-    -webkit-appearance: none;
-    -moz-appearance: window;
-    appearance: none;
     outline: none !important;
     -moz-outline-style: none;
     border: 1px solid @color-swatch5, 25%;
@@ -1160,14 +1157,11 @@ time {
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
     border-radius: 0px;
-    background-image: image('/images/arrow.png');
-    background-position: right 6% center;
-    background-repeat: no-repeat;
+    height: 42px;
     border: 0;
     background-position-x: 98%;
     background-position-y: 53%;
     border:1px solid @color-swatch5;
-    border-radius:0;
 }
 
 .widget.ecomcheckout .delivery select {
@@ -1194,9 +1188,6 @@ time {
 }
 
 select {
-    -webkit-appearance: none;
-    -moz-appearance: window;
-    appearance: none;
     outline: none !important;
     -moz-outline-style: none;
     border: 1px solid @color-swatch5, 25%;
@@ -1206,9 +1197,6 @@ select {
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
     border-radius: 0px;
-    background-image: image('/images/arrow.png');
-    background-position: right 6% center;
-    background-repeat: no-repeat;
     border: 0;
     background-position-x: 95%;
     background-position-y: 53%;
@@ -1258,6 +1246,20 @@ select::-ms-expand {
 
 .widget.ecomcheckout .delivery .delivery-title {
   padding-top: 30px;
+}
+
+.productlist-display-form {
+  position: relative;
+  select {
+    height: 42px;
+  }
+  .productlist-search {
+    position: absolute;
+    bottom: 0;
+    input, button {
+      height: 42px;
+    }
+  }
 }
 
 .widget.ecomproductslist label {
