--- a/stylesheet.less
+++ b/stylesheet.less
@@ -59,7 +59,7 @@ blockquote:before {
 }
 
 .bk-content-text ul, .bk-content-text ol, .bk-content-text li {
-  padding-left: 1.4em; 
+  padding-left: 1.4em;
   text-indent: -1.4em;
 }
 
@@ -286,7 +286,7 @@ footer.bk-footer h4 {
   color: @font-swatch8-color;
   letter-spacing: @font-swatch8-letter-spacing;
   margin-top: 1em;
-} 
+}
 
 .nav-feature .widget.image .image-description {
   font-family:@font-swatch9-font-family;
@@ -315,8 +315,8 @@ footer.bk-footer h4 {
   -moz-border-radius: 5px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-  -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-  box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+  -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+  box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
@@ -328,7 +328,7 @@ footer.bk-footer h4 {
 
 }
 
-.nav-feature .widget.button button:hover 
+.nav-feature .widget.button button:hover
 {
   background-color: @font-swatch7-background-color-hover;
 
@@ -443,8 +443,8 @@ footer.bk-footer h4 {
   -moz-border-radius: 5px;
   border-radius: 5px;
       -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
@@ -455,7 +455,7 @@ footer.bk-footer h4 {
   text-shadow: none;
 }
 
-.widget.button button:hover 
+.widget.button button:hover
 {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -471,17 +471,20 @@ footer.bk-footer h4 {
 }
 
 .widget.content span.expand {
-    font-family: @font-swatch3-font-family;
-    background-color: @color-swatch3;
+  font-family: @font-swatch3-font-family;
+  background-color: @color-swatch3;
+  color: @font-swatch7-color;
+  font-size: @font-swatch5-font-size;
+  padding: 4px 8px;
+  margin: 4px 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  .more, .less {
     color: @font-swatch7-color;
-    font-size: @font-swatch5-font-size;
-    padding: 4px 8px;
-    margin: 4px 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    cursor: pointer;
-    display: inline-block;
+  }
 }
 
 .widget.content span.expand:hover,
@@ -780,8 +783,8 @@ hr.line.align-right {
     -moz-border-radius: 5px;
     border-radius: 5px;
     -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
     font-family: @font-swatch7-font-family;
     font-size: @font-swatch7-font-size;
     font-weight:@font-swatch7-font-weight;
@@ -791,7 +794,7 @@ hr.line.align-right {
     letter-spacing: 1px;
     text-shadow: none;
   }
-  
+
 .widget.contactform fieldset button.btn:hover {
     background-color: @font-swatch7-background-color-hover;
     cursor: pointer;
@@ -855,8 +858,8 @@ hr.line.align-right {
     -moz-border-radius: 5px;
     border-radius: 5px;
     -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
     font-family: @font-swatch7-font-family;
     font-size: @font-swatch7-font-size;
     font-weight:@font-swatch7-font-weight;
@@ -877,7 +880,7 @@ hr.line.align-right {
    =============================== */
 
 .widget.tweet {
-   padding: 14px 0; 
+   padding: 14px 0;
    margin: 0.5em auto;
 }
 
@@ -892,8 +895,8 @@ hr.line.align-right {
   -moz-border-radius: 5px;
   border-radius: 5px;
         -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size:@font-swatch7-font-size;
   font-weight:inherit;
@@ -925,8 +928,8 @@ hr.line.align-right {
   -moz-border-radius: 5px;
   border-radius: 5px;
         -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size:@font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
@@ -963,8 +966,8 @@ hr.line.align-right {
   -moz-border-radius: 5px;
   border-radius: 5px;
         -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size:@font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
@@ -1307,7 +1310,7 @@ select::-ms-expand {
       padding: 0px;
       margin:0px 0px 30px 0px;
     }
-    tr:first-child { 
+    tr:first-child {
           outline: 1px solid darken(@color-swatch1,10%);
             background-color: darken(@color-swatch1,4%);
             -webkit-border-top-left-radius: 4px;
@@ -1543,8 +1546,8 @@ footer .widget.profile .bk-profile-socialicons span a {
     -moz-border-radius: 5px;
     border-radius: 5px;
     -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
     background-color: @font-swatch7-background-color;
     background-repeat: no-repeat;
     background-position: center;
@@ -1687,8 +1690,8 @@ footer .widget.profile span, footer .widget.profile a{
     -moz-border-radius: 5px;
     border-radius: 5px;
     -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
     font-family: @font-swatch7-font-family;
     font-size: @font-swatch7-font-size;
     font-weight:@font-swatch7-font-weight;
@@ -1912,7 +1915,7 @@ footer .widget.profile span, footer .widget.profile a{
     background: @font-swatch6-color-hover;
     box-shadow: 0 6px 0 @font-swatch6-color-hover, 0 12px 0 @font-swatch6-color-hover;
   }
-  
+
  .widget .extendednavigation ul {
     width: 100%;
     display: none;
@@ -2010,12 +2013,12 @@ footer .widget.profile span, footer .widget.profile a{
    .nav-feature .widget.image .image-title {
     font-size:bkscale(@font-swatch8-font-size,0.9);
     line-height:bkscale(@font-swatch8-line-height,0.9);
-  } 
+  }
 
   .nav-feature .widget.image .image-description {
     font-size:bkscale(@font-swatch9-font-size,0.9);
     line-height:bkscale(@font-swatch9-line-height,0.9);
-    } 
+    }
 
   .nav-feature .widget.button button {
     font-size:bkscale(@font-swatch7-font-size,0.9);
@@ -2082,12 +2085,12 @@ footer .widget.profile span, footer .widget.profile a{
    .nav-feature .widget.image .image-title {
     font-size:@font-swatch5-font-size;
     line-height:@font-swatch5-line-height;
-  } 
+  }
 
   .nav-feature .widget.image .image-description {
     font-size:bkscale(@font-swatch9-font-size,0.8);
     line-height:bkscale(@font-swatch9-line-height,0.8);
-    } 
+    }
 
   .nav-feature .widget.button button {
     margin: 1em 0 1.5em;
@@ -2166,8 +2169,8 @@ footer .widget.profile span, footer .widget.profile a{
      -moz-border-radius: 5px;
           border-radius: 5px;
         -webkit-box-shadow: 0px 3px 0px darken(@color-swatch3,15%);
-    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%); 
-    box-shadow:         0px 3px 0px darken(@color-swatch3,15%); 
+    -moz-box-shadow:    0px 3px 0px darken(@color-swatch3,15%);
+    box-shadow:         0px 3px 0px darken(@color-swatch3,15%);
   font-family: @font-swatch7-font-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
@@ -2201,7 +2204,7 @@ footer .widget.profile span, footer .widget.profile a{
     text-align: justify;
   }
 
-  .widget.clicktocall a.italic { 
+  .widget.clicktocall a.italic {
     font-style: italic;
   }
 
