--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1137,6 +1137,11 @@ time {
   box-shadow: 0px 4px 0px 0px rgba(218,218,218,1);
 }
 
+.menu .menu-item-image-wrap .menu-item-image {
+  line-height: 0;
+  display: block;
+}
+
 /* ECOM*/
 
 .widget.ecomproduct {
