Add extra space below image in menu widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1140,6 +1140,7 @@ time {
 .menu .menu-item-image-wrap .menu-item-image {
   line-height: 0;
   display: block;
+  margin-bottom: 10px;
 }
 
 /* ECOM*/
