--- a/stylesheet.less
+++ b/stylesheet.less
@@ -707,10 +707,11 @@ hr.line.align-right {
 }
 
 /* ===============================
-   CONTACT FORM WIDGET
+   CONTACT FORM AND ADVANCED FORM
    =============================== */
 
-.widget.contactform form {
+.widget.contactform form,
+.advancedcontactform form {
     display: block;
     margin-bottom: 20px;
     background-color: @color-swatch7;
@@ -718,14 +719,21 @@ hr.line.align-right {
     padding: 1em;
 }
 
-.widget.contactform fieldset {
+.widget.contactform fieldset,
+.advancedcontactform fieldset {
     border: none;
     padding: 0;
 }
 
-.widget.contactform fieldset label {
+.widget.contactform fieldset label,
+.advancedcontactform .form-group>label {
     width: 100%;
     float: left;
+  }
+
+.widget.contactform fieldset label,
+.advancedcontactform .form-group>label,
+.advancedcontactform .option-list .option-item .label {
     font-family:@font-swatch5-font-family;
     font-size:@font-swatch5-font-size;
     font-weight:@font-swatch5-font-weight;
@@ -734,7 +742,10 @@ hr.line.align-right {
     letter-spacing: @font-swatch5-letter-spacing;
 }
 
-.widget.contactform fieldset input {
+.widget.contactform fieldset input,
+.advancedcontactform form input[type=email], 
+.advancedcontactform form input[type=text],
+.advancedcontactform form select {
     height: 40px;
     width: 100%;
     border: none;
@@ -748,12 +759,14 @@ hr.line.align-right {
     padding: 0;
 }
 
-.widget.contactform fieldset input:focus {
+.widget.contactform fieldset input:focus,
+.advancedcontactform form input:focus {
     outline: none;
     box-shadow: 0 0 5px @color-swatch3;
 }
 
-.widget.contactform fieldset textarea {
+.widget.contactform fieldset textarea,
+.advancedcontactform fieldset textarea {
     height: 100px;
     width: 100%;
     border: none;
@@ -769,13 +782,15 @@ hr.line.align-right {
     padding: 0;
 }
 
-.widget.contactform fieldset textarea:focus {
+.widget.contactform fieldset textarea:focus,
+.advancedcontactform fieldset textarea:focus {
     outline: none;
     box-shadow: 0 0 5px @color-swatch3;
 }
 
 
-.widget.contactform fieldset button.btn {
+.widget.contactform fieldset button.btn,
+.advancedcontactform fieldset button {
     padding: 15px 25px;
     margin: 0;
     border: none;
@@ -795,9 +810,14 @@ hr.line.align-right {
     text-shadow: none;
   }
 
-.widget.contactform fieldset button.btn:hover {
+.widget.contactform fieldset button.btn:hover,
+.advancedcontactform fieldset button:hover {
     background-color: @font-swatch7-background-color-hover;
     cursor: pointer;
+}
+
+.advancedcontactform .option-list {
+  padding: 1em 0;
 }
 
 
