Made file download style more consistent with the button for PIRATE-4958

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -434,8 +434,9 @@ footer.bk-footer h4 {
     padding: 4px 0;
 }
 
-.widget.button button
-{
+.widget.button button,
+.widget.button .btn,
+.filedownload .btn {
   padding: 15px 25px;
   margin: 0.5em auto;
   border: none;
