Increased file download specificity

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -436,7 +436,7 @@ footer.bk-footer h4 {
 
 .widget.button button,
 .widget.button .btn,
-.filedownload .btn {
+.widget .filedownload .btn {
   padding: 15px 25px;
   margin: 0.5em auto;
   border: none;
