Added padding to stop pdf icon overlapping text

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -456,6 +456,10 @@ footer.bk-footer h4 {
   text-shadow: none;
 }
 
+.widget.filedownload .btn {
+  padding-left: 40px;
+}
+
 .widget.button button:hover
 {
   background-color: @font-swatch7-background-color-hover;
